Bring basic styling to timelines
* I found it hard to style this timeline, so the styling
  is not that beautiful
* rifs off of https://app.zeplin.io/project/5dacfaeaa6610b6d49c1afbe/screen/5dacfb2796c79d7992911218

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -25,3 +25,4 @@ $light: $pale-grey-two
 // Require all css that uses global variables here
 @import '~bootstrap/scss/bootstrap.scss'
 @import 'signup/styles/index.sass'
+@import 'timeline/styles/index.sass'
