--- a/src/signup/styles/index.sass
+++ b/src/signup/styles/index.sass
@@ -1,23 +1,19 @@
-@mixin input-border
-  border: none
-  border-bottom: 1px solid
-  border-radius: 0
-
-$pane-border-radius: 30px
+@import "common/styles/variables"
+@import "common/styles/util"
 
 .signup
 
   .pane-1
     background-color: $pale-grey
-    border-radius: $pane-border-radius 0 0 $pane-border-radius
+    border-radius: $auth-pane-border-radius-radius 0 0 $auth-pane-border-radius-radius
 
   .pane-2
     background-color: $white
-    border-radius: 0 $pane-border-radius $pane-border-radius 0
+    border-radius: 0 $auth-pane-border-radius-radius $auth-pane-border-radius-radius 0
 
     input
-      @include input-border
+      @include auth-input-border
 
     .input-group-text
       background-color: $white
-      @include input-border
+      @include auth-input-border
