Get a basic gutter sidebar working
* Have "demo" in doctor base

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,4 +1,4 @@
-// Require all css that uses global variables here
+// Bring in bootstrap styles, allowing leading imports to override bootstrap variables
 @import 'common/styles/variables.sass'
 @import 'common/styles/util.sass'
 @import '~bootstrap/scss/bootstrap.scss'
