--- a/src/common/styles/variables.sass
+++ b/src/common/styles/variables.sass
@@ -8,6 +8,8 @@ $charcoal-grey-two: #3a4147
 $pale-grey: #f1f1f5
 $pale-grey-two: #fafafb
 $white: #ffffff
+$bright-blue: #0062ff
+$bluey-grey: #92929d
 
 // Reassign bootstrap colors
 $primary: $water-blue
@@ -21,3 +23,5 @@ $light: $pale-grey-two
 // for signin/up, how rounded are the display corners
 $auth-pane-border-radius-radius: 30px
 
+$navbar-border-size: 1px
+$navbar-height: calc(3.5em + $navbar-border-size) // magic, seems to be the height of the navbar (plus bottom border)
