MP-14: Add basic tooltips to timeline

--- a/src/timeline/styles/index.sass
+++ b/src/timeline/styles/index.sass
@@ -31,3 +31,12 @@ $group-margin: 10px
 // all
 .vis-item
   border-radius: 3px 15px 15px 3px !important
+
+// tooltips
+.timeline-tooltip
+  padding: 10px
+  background-color: $pale-grey
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
+
+.vis-tooltip
+  padding: 0 !important
