Fix scrollability issue on signup
* Previous background solution used position:fixed which disallowed for
  scrolling
  * It did this to get the background container to stretch fully
    vertically.
  * However losing the scrolling was the tradeoff
* In a flash of insight I figured out a new way, which allows scrolling
  and has the perfect background height. Hooray!

--- a/src/common/styles/util.sass
+++ b/src/common/styles/util.sass
@@ -1,8 +1,9 @@
+@import "common/styles/variables"
+
 // Helper class to let backgrounds be assigned to an element and have it look like
 // the whole page
 .with-background
-  position: fixed
-  height: 100%
+  min-height: $viewport-height
 
 @mixin auth-input-border
   border: none
