--- a/src/common/styles/variables.sass
+++ b/src/common/styles/variables.sass
@@ -24,3 +24,5 @@ $light: $pale-grey-two
 $auth-pane-border-radius-radius: 30px
 
 $navbar-border-size: 1px
+$navbar-height: calc(3.5em + #{$navbar-border-size})
+$viewport-height: calc(100vh - #{$navbar-height})
