Add "click timeline to add event" functionality

--- a/src/timeline/styles/index.sass
+++ b/src/timeline/styles/index.sass
@@ -20,6 +20,7 @@ $group-margin: 10px
     display: flex
     align-items: center
     justify-content: flex-end
+    padding: 3px
 
 // "point" item
 .vis-item.vis-point
