--- a/src/doctor-dashboard/styles/patient-container.sass
+++ b/src/doctor-dashboard/styles/patient-container.sass
@@ -6,5 +6,5 @@
     border: 1px solid $charcoal-grey-two
     border-radius: 10px
     outline: none
-    padding: 5px 10px 5px 10px
+    padding: 7px
     color: $charcoal-grey-two
