--- a/src/doctor-dashboard/styles/patient-container.sass
+++ b/src/doctor-dashboard/styles/patient-container.sass
@@ -2,9 +2,16 @@
 
 .doctor-dashboard-patient-container
 
+  // Search input box
   input
-    border: 1px solid $charcoal-grey-two
+    border: 1px solid darken($pale-grey, 5%)
     border-radius: 10px
     outline: none
-    padding: 7px
+    padding: 11px 20px
     color: $charcoal-grey-two
+
+  .dropdown-toggle
+    padding: 10px 20px
+
+  .dropdown-toggle::after
+    margin-left: 15px
