Add a date picker for updating timeline events

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -10,3 +10,6 @@
 // engaged and this won't use the rule
 button.btn:focus, button.btn:active
   box-shadow: none !important
+
+input:focus, input:active
+  box-shadow: none !important
