--- a/src/common/styles/form-input.sass
+++ b/src/common/styles/form-input.sass
@@ -10,5 +10,14 @@
     @include auth-input-border
 
   .input-group-text
+    transition: border-bottom-color 0.3s
     background-color: $white
     @include auth-input-border
+
+  // This rule selects the icon, and when the input turns its underline
+  // a diff color when it's in use, this will see that and turn its color
+  // as well. Without this line, when one field is active, the underline
+  // is light blue until it hits the icon, then the underline turns black.
+  // This adds the continuity.
+  input:focus + .input-group-append > .input-group-text
+    border-bottom-color: #5bcef5 // match the underline color of bootstrap
