--- a/src/timeline/styles/index.sass
+++ b/src/timeline/styles/index.sass
@@ -39,9 +39,12 @@ $group-margin: 10px
 
 // tooltips
 .timeline-tooltip
-  padding: 10px
-  background-color: $pale-grey
+  border-radius: 30px
+  padding: 25px
+  background-color: lighten($pale-grey, 2%)
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
 
 .vis-tooltip
+  border-radius: 30px !important
+  border: 1px solid darken($pale-grey, 10%) !important
   padding: 0 !important
