Ensure Alert doesn't interfere with other components on screen
Closes #60

--- a/src/common/styles/util.sass
+++ b/src/common/styles/util.sass
@@ -5,6 +5,10 @@
 .with-background
   min-height: $viewport-height
 
+// Make something absolute be closest to the user
+.z-9999
+  z-index: 9999
+
 @mixin auth-input-border
   border: none
   border-bottom: 1px solid
