Fix small gutter nav CSS issue
* On vertically shrunken screens the menu links appeared off to the
  right of the gutter nav to fit on screen.
* Set overflow to something that worked in my browser at the time but
  have no idea what actually does.

--- a/src/applets/app-gutter-nav/AppGutterNav.sass
+++ b/src/applets/app-gutter-nav/AppGutterNav.sass
@@ -13,6 +13,7 @@ $vertical-spacing: 55px
   height: 100vh
   background-color: $bg-color
   z-index: 1000
+  overflow: auto
 
   .nav-entry
     margin-top: 10px
