Create a rough draft of a doctor dashboard.

--- a/src/common/styles/variables.sass
+++ b/src/common/styles/variables.sass
@@ -10,9 +10,11 @@ $pale-grey-two: #fafafb
 $white: #ffffff
 $bright-blue: #0062ff
 $bluey-grey: #92929d
+$darkish-pink: #d54782
 
 // Reassign bootstrap colors
 $primary: $water-blue
+$secondary: $bluey-grey
 $success: $turtle-green
 $warning: $mango
 $danger: $ruby
