--- a/src/common/styles/util.sass
+++ b/src/common/styles/util.sass
@@ -9,6 +9,10 @@
 .z-9999
   z-index: 9999
 
+// We want one more bg- than bootstrap is providing
+.bg-pink
+  background-color: $darkish-pink
+
 @mixin auth-input-border
   border: none
   border-bottom: 1px solid
