Create a universal Error page.
This should make quality of life developing better because this can be
thrown up anywhere a big block needs to be rendered with an error.
Errors from buttons and stuff should be done uniquely to each screen
using them.

--- a/src/util.sass
+++ b/src/util.sass
@@ -13,6 +13,10 @@
 .bg-pink
   background-color: $darkish-pink
 
+// Throw this on and the user knows it can be clicked
+.clickable
+  cursor: pointer
+
 @mixin auth-input-border
   border: none
   border-bottom: 1px solid
