Update Admin Questionnaires so it has some style

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -9,6 +9,8 @@
 // when a button is pressed, both the focus and active pseudo classes are
 // engaged and this won't use the rule
 button.btn:focus, button.btn:active,
+.btn.focus, .btn.active,
+.btn-primary.focus, .btn-primary.active,
 input:focus, input:active,
 label:focus, label:active,
 .custom-control-input:focus ~ .custom-control-label::before
