--- a/src/styles.sass
+++ b/src/styles.sass
@@ -14,5 +14,8 @@ button.btn:focus, button.btn:active,
 input:focus, input:active,
 label:focus, label:active,
 .custom-control-input:focus ~ .custom-control-label::before
+*:focus, *:active
   box-shadow: none !important
   outline: none !important
+
+
